Bug #20843 tests fails randomly with assertion in completeClusterFailed